# SUSTech-CS301-STM32

./: .gitignore  readme.md  stm32-doc.code-workspace  stm32.code-workspace
lab/24cxx_i2c/: .clang-tidy  24cxx_i2c.ioc  CMakeLists.txt
lab/24cxx_i2c/Core/Inc/: main.h  usart.h
lab/24cxx_i2c/Core/Src/: gpio.c  main.c  stm32f1xx_it.c  usart.c
lab/24cxx_i2c/cmake/stm32cubemx/: CMakeLists.txt
lab/assign1/: bibliography.bib  main.typ
lab/assign2/: .mxproject  CMakeLists.txt  STM32F103RCTx_FLASH.ld  assign2.ioc
lab/assign2/Core/Inc/: gpio.h  hamming.h  main.h  stm32f1xx_it.h
lab/assign2/Core/Src/: gpio.c  hamming.c  lcd.c  main.c  stm32f1xx_it.c
lab/assign2/cmake/stm32cubemx/: CMakeLists.txt
lab/assign2/python/: hamming.ipynb
lab/assign3/: .clang-tidy  .mxproject  CMakeLists.txt  assign3.ioc  ruff.toml  video_uart.py
lab/assign3/Core/Inc/: dma.h  lcd.h  main.h  ringbuf.h  stm32f1xx_it.h  usart.h
lab/assign3/Core/Src/: dma.c  gpio.c  main.c  memcpy.c  ringbuf.c  stm32f1xx_it.c  tim.c  usart.c
lab/assign3/cmake/: gcc-arm-none-eabi.cmake
lab/assign3/cmake/stm32cubemx/: CMakeLists.txt
lab/lab_adc/: .clang-tidy  CMakeLists.txt  lab_adc.ioc
lab/lab_adc/Core/Inc/: main.h  stm32f1xx_it.h
lab/lab_adc/Core/Src/: adc.c  dma.c  lcd.c  main.c  stm32f1xx_it.c  tim.c
lab/lab_adc/cmake/: gcc-arm-none-eabi.cmake
lab/lab_adc/cmake/stm32cubemx/: CMakeLists.txt
lab/lab_lcd/: .clang-tidy  CMakeLists.txt  lab_lcd.ioc
lab/lab_lcd/Core/Inc/: main.h  stm32f1xx_it.h
lab/lab_lcd/Core/Src/: gpio.c  main.c  stm32f1xx_it.c
lab/lab_lcd/cmake/stm32cubemx/: CMakeLists.txt
lab/lab_led/: .clang-format  .clang-tidy  .clangd  .gitignore  .mxproject  CMakeLists.txt  STM32F103RCTx_FLASH.ld  gen_ihex.py  lab_led.ioc  note_lab_led.md  platformio.ini  set_compiledb.py
lab/lab_led/Core/Inc/: main.h  stm32f1xx_hal_conf.h
lab/lab_led/Core/Src/: gpio.c  main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c  tim.c
lab/lab_led/src/: gpio.c
lab/lab_usart/: .clang-format  .clang-tidy  .mxproject  CMakeLists.txt  fsm.drawio  lab_usart.ioc
lab/lab_usart/Core/Inc/: main.h  (+2 more)
lab/timer/: .clang-tidy  .mxproject  CMakeLists.txt  timer.ioc
lab/touch_screen/: .clang-tidy  .clangd  .mxproject  CMakeLists.txt  demo_for_screen.ioc
lab/touch_screen/cmake/stm32cubemx/: CMakeLists.txt
lab/tutorial_for_vscode/: note_lab_led.md  note_lab_led.typ  typst.toml
lab/watchdog_wwdg/: .clang-tidy  .mxproject  CMakeLists.txt  watchdog_wwdg.ioc  wwdg_calc.ipynb
pwm_calc/: buckcalc.ipynb  cppinclude_trans.ipynb  pwmcalc.ipynb
(+48 files in other folders)
